# s4-logs

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  NOTICE  README.md  S4_LOGS_PROPOSAL.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  e2e.yml  fuzz-nightly.yml  release.yml  soak.yml
contrib/grafana/: README.md  s4logs-gateway.json
crates/s4logs-cli/: Cargo.toml
crates/s4logs-cli/src/: aws.rs  cli.rs  main.rs  scan.rs  timearg.rs
crates/s4logs-cli/src/commands/: drain.rs  grep.rs  mod.rs  plan.rs  report.rs  restore.rs  serve.rs
crates/s4logs-core/: Cargo.toml
crates/s4logs-core/benches/: chunk_encode.rs  frame_prune_decode.rs  tsindex_codec.rs
crates/s4logs-core/src/: chunk.rs  layout.rs  lib.rs  read.rs  record.rs  sink.rs  store.rs  tsindex.rs
crates/s4logs-core/tests/: fuzz_bolero.rs  proptest_format.rs
crates/s4logs-drain/: Cargo.toml
crates/s4logs-drain/src/: cw.rs  discover.rs  job.rs  lib.rs  manifest.rs  progress.rs  reconcile.rs  retention.rs  shard.rs  testutil.rs  window.rs
crates/s4logs-e2e/: Cargo.toml
crates/s4logs-e2e/src/: lib.rs
crates/s4logs-e2e/tests/: bench_compression.rs  grep_path.rs  mode_a_drain.rs  mode_b_gateway.rs  sidecar_fallback.rs  soak.rs
crates/s4logs-e2e/tests/common/: mod.rs
crates/s4logs-gateway/: Cargo.toml
crates/s4logs-gateway/src/: api.rs  auth.rs  buffer.rs  forward.rs  handlers.rs  lib.rs  registry.rs  routing.rs  sink.rs  wal.rs
crates/s4logs-gateway/tests/: fuzz_bolero.rs  gateway.rs
docs/: athena.md  iam-policy-drain.json  iam-policy-gateway.json  iam-policy-restore.json
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__s4logs-core__src__chunk.rs_line_103_col_9_001.diff  crates__s4logs-core__src__chunk.rs_line_109_col_27.diff  crates__s4logs-core__src__chunk.rs_line_109_col_27_001.diff  crates__s4logs-core__src__chunk.rs_line_109_col_9_001.diff  crates__s4logs-core__src__chunk.rs_line_113_col_27.diff  crates__s4logs-core__src__chunk.rs_line_113_col_27_001.diff  crates__s4logs-core__src__chunk.rs_line_113_col_9.diff  crates__s4logs-core__src__chunk.rs_line_113_col_9_001.diff  crates__s4logs-core__src__chunk.rs_line_117_col_9.diff  crates__s4logs-core__src__chunk.rs_line_120_col_30_001.diff  crates__s4logs-core__src__chunk.rs_line_142_col_27.diff  crates__s4logs-core__src__chunk.rs_line_142_col_27_001.diff  crates__s4logs-core__src__chunk.rs_line_156_col_9_001.diff  crates__s4logs-core__src__chunk.rs_line_172_col_12.diff  crates__s4logs-core__src__chunk.rs_line_218_col_5.diff  crates__s4logs-core__src__chunk.rs_line_218_col_5_001.diff  crates__s4logs-core__src__chunk.rs_line_218_col_5_002.diff  crates__s4logs-core__src__read.rs_line_112_col_26.diff  crates__s4logs-core__src__read.rs_line_112_col_5_001.diff  crates__s4logs-core__src__read.rs_line_112_col_5_002.diff  crates__s4logs-core__src__read.rs_line_154_col_9_001.diff  crates__s4logs-core__src__read.rs_line_158_col_71.diff  crates__s4logs-core__src__read.rs_line_159_col_59.diff  crates__s4logs-core__src__read.rs_line_21_col_16.diff  crates__s4logs-core__src__read.rs_line_21_col_39.diff  crates__s4logs-core__src__read.rs_line_21_col_49.diff  crates__s4logs-core__src__read.rs_line_21_col_9.diff  crates__s4logs-core__src__read.rs_line_54_col_5.diff  crates__s4logs-core__src__read.rs_line_79_col_5.diff  crates__s4logs-core__src__read.rs_line_79_col_5_003.diff  crates__s4logs-core__src__read.rs_line_79_col_5_004.diff  crates__s4logs-core__src__read.rs_line_79_col_5_005.diff  crates__s4logs-core__src__read.rs_line_79_col_5_008.diff  crates__s4logs-core__src__read.rs_line_84_col_23.diff  crates__s4logs-core__src__read.rs_line_99_col_44.diff  crates__s4logs-core__src__tsindex.rs_line_104_col_19.diff  crates__s4logs-core__src__tsindex.rs_line_104_col_19_001.diff  crates__s4logs-core__src__tsindex.rs_line_104_col_19_002.diff  crates__s4logs-core__src__tsindex.rs_line_19_col_38.diff  crates__s4logs-core__src__tsindex.rs_line_19_col_38_001.diff  (+68 more)
mutants.out/diff/: crates__s4logs-core__src__chunk.rs_line_103_col_27.diff  crates__s4logs-core__src__chunk.rs_line_103_col_32.diff  crates__s4logs-core__src__chunk.rs_line_103_col_56.diff  crates__s4logs-core__src__chunk.rs_line_103_col_9.diff  crates__s4logs-core__src__chunk.rs_line_109_col_9.diff  crates__s4logs-core__src__chunk.rs_line_120_col_30.diff  crates__s4logs-core__src__chunk.rs_line_121_col_31.diff  crates__s4logs-core__src__chunk.rs_line_128_col_9.diff  crates__s4logs-core__src__chunk.rs_line_144_col_27.diff  crates__s4logs-core__src__chunk.rs_line_144_col_27_001.diff  crates__s4logs-core__src__chunk.rs_line_156_col_9.diff  crates__s4logs-core__src__chunk.rs_line_165_col_9.diff  crates__s4logs-core__src__chunk.rs_line_165_col_9_001.diff  crates__s4logs-core__src__chunk.rs_line_184_col_26.diff  crates__s4logs-core__src__chunk.rs_line_184_col_26_001.diff  crates__s4logs-core__src__chunk.rs_line_186_col_26.diff  crates__s4logs-core__src__chunk.rs_line_186_col_26_001.diff  crates__s4logs-core__src__read.rs_line_112_col_26_001.diff  crates__s4logs-core__src__read.rs_line_112_col_26_002.diff  crates__s4logs-core__src__read.rs_line_112_col_5.diff  crates__s4logs-core__src__read.rs_line_122_col_25.diff  crates__s4logs-core__src__read.rs_line_125_col_25.diff  crates__s4logs-core__src__read.rs_line_154_col_9.diff  crates__s4logs-core__src__read.rs_line_159_col_59_001.diff  crates__s4logs-core__src__read.rs_line_163_col_16.diff  crates__s4logs-core__src__read.rs_line_21_col_16_001.diff  crates__s4logs-core__src__read.rs_line_21_col_16_002.diff  crates__s4logs-core__src__read.rs_line_21_col_9_001.diff  crates__s4logs-core__src__read.rs_line_54_col_34.diff  crates__s4logs-core__src__read.rs_line_54_col_5_001.diff  crates__s4logs-core__src__read.rs_line_79_col_5_001.diff  (+8 more)
scripts/: e2e.sh  install.sh  run-gateway-docker.sh  soak.sh
