[workspace]
resolver = "2"
members = [
    "crates/s4logs-core",
    "crates/s4logs-drain",
    "crates/s4logs-gateway",
    "crates/s4logs-cli",
    "crates/s4logs-e2e",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.92"
license = "Apache-2.0"
authors = ["abyo software 合同会社"]
repository = "https://github.com/abyo-software/s4-logs"
homepage = "https://github.com/abyo-software/s4-logs"
description = "S4 Logs — CloudWatch Logs cost offloader: drain or bypass log groups into zstd-compressed S3."
keywords = ["cloudwatch", "logs", "compression", "zstd", "aws"]
categories = ["compression", "command-line-utilities"]

[workspace.dependencies]
# The S4IX sidecar format is consumed verbatim from here; the S4F2 frame
# container is NOT used (we write standard RFC 8878 zstd frames — DESIGN.md
# §4). Pinned to the v1.0.0 tag: the S4IX format is frozen for 1.x.
s4-codec = { git = "https://github.com/abyo-software/s4", tag = "v1.0.0" }

# NOTE: the AWS SDK crates pull a legacy rustls 0.21 / rustls-webpki 0.101.7
# connector that is compiled but never the active HTTPS client (we use the
# modern rustls-aws-lc / rustls 0.23 default). Dropping it breaks aws-runtime's
# build, so the resulting advisories are documented + ignored in `deny.toml`.
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-cloudwatchlogs = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = "1"
zstd = "0.13"
crc32c = "0.6"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std"] }
globset = "0.4"
uuid = { version = "1", features = ["v4"] }
proptest = "1"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
# s4 と同じ規律。テスト module は `#[allow(clippy::unwrap_used)]` を明示して使う。
unwrap_used = "deny"

[profile.release]
lto = "thin"
# Strip symbols at link time so the release workflow needs no external
# `strip`/`llvm-strip` — the cross container and the host both honor this,
# which fixes the aarch64 packaging step (GNU strip can't read the
# cross-built ARM ELF). v0.4.0 release-job fix.
strip = "symbols"

# `cargo bolero test --engine libfuzzer` defaults to `--profile fuzz` (s4 と
# 同じ規約 — evo-x2 farm の run-s4logs-fuzz.sh が依存)。Inherit from
# `release` (optimized, no debug-asserts) but force codegen-units=1 (bolero
# README warns of compilation bugs otherwise) and keep debug info so
# libfuzzer crash artifacts symbolicate.
[profile.fuzz]
inherits = "release"
codegen-units = 1
debug = true
overflow-checks = true
