[package]
name = "s4logs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S4 Logs CLI — drain, grep, restore, serve."

[lints]
workspace = true

[[bin]]
name = "s4logs"
path = "src/main.rs"

[dependencies]
s4logs-core = { path = "../s4logs-core" }
s4logs-drain = { path = "../s4logs-drain" }
s4logs-gateway = { path = "../s4logs-gateway" }
anyhow.workspace = true
aws-config.workspace = true
# `plan` reads AWS/Logs IncomingBytes via GetMetricData (CloudWatch Metrics,
# a different service/SDK from CloudWatch Logs).
aws-sdk-cloudwatch.workspace = true
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["env"] }
futures.workspace = true
regex = "1"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# Sidecar-less fallback decode in `grep`/`restore` (lock-in story: data stays
# readable when .s4index/.s4lts are missing) needs a raw zstd stream decoder.
zstd.workspace = true

[dev-dependencies]
# k-way merge ordering + streaming-batcher invariants (DESIGN.md §11.3).
proptest.workspace = true
tempfile.workspace = true
