[package]
name = "s4logs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S4 Logs core — standard-zstd multiframe chunk format, S4IX/S4LT sidecars, S3 object store."

[lints]
workspace = true

[dependencies]
s4-codec.workspace = true
aws-sdk-s3.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
crc32c.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
# HTTP-free SDK operation mocking for ObjectStore unit tests (no LocalStack
# here — wave 2E owns docker E2E). Crate-local on purpose: only core needs it.
aws-smithy-mocks = "0.2"
# `test-util` unlocks `Config::with_test_defaults_v2` which `mock_client!`
# needs (dummy credentials, no retry sleep). Dev-only; release builds of
# dependents do not inherit it.
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
