[package]
name = "s4logs-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S4 Logs core — standard-zstd multiframe chunk format, S4IX/S4LT sidecars, S3 object store."

[lints]
workspace = true

[dependencies]
s4-codec.workspace = true
aws-sdk-s3.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
crc32c.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zstd.workspace = true

[dev-dependencies]
# HTTP-free SDK operation mocking for ObjectStore unit tests (no LocalStack
# here — wave 2E owns docker E2E). Crate-local on purpose: only core needs it.
aws-smithy-mocks = "0.2"
# `test-util` unlocks `Config::with_test_defaults_v2` which `mock_client!`
# needs (dummy credentials, no retry sleep). Dev-only; release builds of
# dependents do not inherit it.
aws-sdk-s3 = { workspace = true, features = ["test-util"] }
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Bolero fuzz targets (`tests/fuzz_bolero.rs`) — same `check!` API drives the
# random engine under plain `cargo test` and coverage-guided libfuzzer via
# `cargo bolero test` (nightly fuzz workflow). Crate-local (not a workspace
# dep) because only core has fuzzable format surface; same 0.13 line as s4.
bolero = "0.13"
# Criterion regression-tracking benches in `benches/` — same pin discipline
# as s4-codec: 0.5 is the last line with the `bench_function` / `Throughput`
# API the bench sources use; `html_reports` off (CI consumes the JSON, HTML
# rendering only adds plotters churn).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Each `[[bench]]` is a `cargo bench -p s4logs-core --bench <name>` target;
# `harness = false` lets criterion supply its own `main`. Smoke-runnable via
# `cargo bench -p s4logs-core --bench <name> -- --quick`.
[[bench]]
name = "chunk_encode"
harness = false

[[bench]]
name = "frame_prune_decode"
harness = false

[[bench]]
name = "tsindex_codec"
harness = false
