[package]
name = "s4logs-drain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S4 Logs Mode A — drain CloudWatch log groups into zstd-compressed S3 with manifest-gated retention shortening."

[lints]
workspace = true

[dependencies]
s4logs-core = { path = "../s4logs-core" }
aws-sdk-cloudwatchlogs.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
# `--log-group` glob discovery (DESIGN.md §11.4) — same engine/defaults as
# the gateway routing globs.
globset.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
# HTTP-free SDK operation mocking for `AwsCwSource::list_log_groups`
# pagination (same crate-local discipline as s4logs-core's S3 mocks).
aws-smithy-mocks = "0.2"
# `test-util` unlocks the dummy-credential config `mock_client!` needs.
aws-sdk-cloudwatchlogs = { workspace = true, features = ["test-util"] }
proptest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
