[package]
name = "s4logs-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "S4 Logs end-to-end tests against LocalStack (S3 + CloudWatch Logs). Not published."
publish = false

[lints]
workspace = true

[dependencies]

[dev-dependencies]
s4logs-core = { path = "../s4logs-core" }
s4logs-drain = { path = "../s4logs-drain" }
s4logs-gateway = { path = "../s4logs-gateway" }
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-cloudwatchlogs.workspace = true
aws-sdk-s3.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
zstd.workspace = true
